@@ -25,7 +25,7 @@
 
 #if defined (CONFIG_GE1_RGMII_AN) || defined (CONFIG_P5_MAC_TO_PHY_MODE) || \
     defined (CONFIG_GE2_RGMII_AN) || defined (CONFIG_P4_MAC_TO_PHY_MODE)
-void init_giga_phy(int ge)
+void init_ext_giga_phy(int ge)
 {
 	u32 phy_id0 = 0, phy_id1 = 0, phy_val = 0;
 #if defined (CONFIG_MAC_TO_GIGAPHY_MODE_ADDR2)
@@ -264,6 +264,11 @@ void fe_phy_init(void)
 	*(volatile u32 *)(REG_PAD_RGMII2_MDIO_CFG) &= ~(0x3 << 4);	// reduce RGMII2 PAD driving strength
 #endif
 	mt7621_esw_init();
+
+#if defined (CONFIG_GE2_INTERNAL_GPHY_P0) || defined (CONFIG_GE2_INTERNAL_GPHY_P4)
+	/* autopoll GPHY P4/P0 */
+	enable_autopoll_phy(1);
+#endif
 #else
 	/* RT3883 GE1 + External GSW (MDIO mode set by mii_mgr_init) */
 	ge1_set_mode(0, 0);
@@ -290,7 +295,7 @@ void fe_phy_init(void)
 #if defined (CONFIG_RALINK_MT7621)
 	sysRegWrite(RALINK_ETH_SW_BASE+0x100, 0x20056300);		// (GE1, AN)
 #endif
-	init_giga_phy(1);
+	init_ext_giga_phy(1);
 	enable_autopoll_phy(1);
 #endif
 
@@ -300,7 +305,7 @@ void fe_phy_init(void)
 #if defined (CONFIG_RALINK_MT7621)
 	sysRegWrite(RALINK_ETH_SW_BASE+0x200, 0x20056300);		// (GE2, AN)
 #endif
-	init_giga_phy(2);
+	init_ext_giga_phy(2);
 	enable_autopoll_phy(2);
 #endif
 
