@@ -895,7 +895,8 @@
 20) kernel: ralink_raeth: add support MT7621 'clause 45' MDIO control.<br>
 21) kernel: ralink_raeth: fix dump MT7621/MT7530 EPHY registers.<br>
 22) kernel: ralink_raeth: move early ESW init to global unit.<br>
-23) kernel: tcp: update reordering first before detecting loss.<br>
+23) kernel: ralink_raeth: add EEE-related functions, disable EEE by default, fix disable EEE on MT7620 ESW, improve EEE support on MT7621/MT7530.<br>
+24) kernel: tcp: update reordering first before detecting loss.<br>
 <br>
 <br>
 <b>TODO:</b><br>
